--- a/notebooks/iros2020.Rmd
+++ b/notebooks/iros2020.Rmd
@@ -3132,407 +3132,33 @@ p3 = gg_df %>%
 grid.arrange(p1, p2, p3, ncol = 3)
 
 # Visualize also the variation in each of the three levels that we care about
-p1 = gg_df %>%
-  ggplot(aes(num_actions_diff, group = scenario_completed, fill = scenario_completed)) +
-    geom_histogram(binwidth = 1) +
-    facet_grid(rows = vars(has_ax)) +
-    ylim(0, 30) +
-    scale_fill_economist() +
-    legend_none()
-
-p2 = gg_df %>%
-  ggplot(aes(num_actions_diff, group = scenario_completed, fill = scenario_completed)) +
-    geom_histogram(binwidth = 1) +
-    facet_grid(rows = vars(has_dx)) +
-    ylim(0, 30) +
-    scale_fill_economist() +
-    theme(legend.position = "bottom")
-
-p3 = gg_df %>%
-  ggplot(aes(num_actions_diff, group = scenario_completed, fill = scenario_completed)) +
-    geom_histogram(binwidth = 1) +
-    facet_grid(rows = vars(noise_level)) +
-    ylim(0, 30) +
-    scale_fill_economist() +
-    legend_none()
-
-grid.arrange(p1, p2, p3, ncol = 3)
+# p1 = gg_df %>%
+#   ggplot(aes(num_actions_diff, group = scenario_completed, fill = scenario_completed)) +
+#     geom_histogram(binwidth = 1) +
+#     facet_grid(rows = vars(has_ax)) +
+#     ylim(0, 30) +
+#     scale_fill_economist() +
+#     legend_none()
+# 
+# p2 = gg_df %>%
+#   ggplot(aes(num_actions_diff, group = scenario_completed, fill = scenario_completed)) +
+#     geom_histogram(binwidth = 1) +
+#     facet_grid(rows = vars(has_dx)) +
+#     ylim(0, 30) +
+#     scale_fill_economist() +
+#     theme(legend.position = "bottom")
+# 
+# p3 = gg_df %>%
+#   ggplot(aes(num_actions_diff, group = scenario_completed, fill = scenario_completed)) +
+#     geom_histogram(binwidth = 1) +
+#     facet_grid(rows = vars(noise_level)) +
+#     ylim(0, 30) +
+#     scale_fill_economist() +
+#     legend_none()
+# 
+# grid.arrange(p1, p2, p3, ncol = 3)
 ```
 
-From the data, it looks like we might be most interested in a 
-
-Checking some probability distributions of the action counts (given the above plots):
-
-```{r}
-# Run a few simple distribution fitting tests using the action
-x = fit_and_print_dist(plot_df %>% filter(has_ax == T, scenario_completed == 1) %>% pull(num_actions_diff),
-                       "pois", "AX = T, SC = T; pois:")
-x = fit_and_print_dist(plot_df %>% filter(has_ax == T, scenario_completed == 1) %>% pull(num_actions_diff),
-                       "nbinom", "AX = T, SC = T; nbinom:")
-x = fit_and_print_dist(plot_df %>% filter(has_ax == T) %>% pull(num_actions_diff),
-                       "pois", "AX = T, NSC; pois:")
-x = fit_and_print_dist(plot_df %>% filter(has_ax == T) %>% pull(num_actions_diff),
-                       "nbinom", "AX = T, NSC; nbinom:")
-
-# Try a couple of other predictor variables
-x = fit_and_print_dist(plot_df %>% filter(has_dx == T, scenario_completed == 1) %>% pull(num_actions_diff),
-                       "nbinom", "DX = T, SC == T; nbinom:")
-x = fit_and_print_dist(plot_df %>% filter(noise_level == "0.0", scenario_completed == 1) %>% pull(num_actions_diff),
-                       "nbinom", "Noise = 0, SC == T; nbinom:")
-x = fit_and_print_dist(plot_df %>% filter(noise_level == "1.0", scenario_completed == 1) %>% pull(num_actions_diff),
-                       "nbinom", "Noise = 1, SC == T; nbinom:")
-x = fit_and_print_dist(plot_df %>% filter(noise_level == "2.0", scenario_completed == 1) %>% pull(num_actions_diff),
-                       "nbinom", "Noise = 2, SC == T; nbinom:")
-x = fit_and_print_dist(plot_df %>% filter(has_dx == T, scenario_completed == 1) %>% pull(num_actions_diff),
-                       "pois", "DX = T, SC == T; pois:")
-x = fit_and_print_dist(plot_df %>% filter(noise_level == "0.0", scenario_completed == 1) %>% pull(num_actions_diff),
-                       "pois", "Noise = 0, SC == T; pois:")
-x = fit_and_print_dist(plot_df %>% filter(noise_level == "1.0", scenario_completed == 1) %>% pull(num_actions_diff),
-                       "pois", "Noise = 1, SC == T; pois:")
-x = fit_and_print_dist(plot_df %>% filter(noise_level == "2.0", scenario_completed == 1) %>% pull(num_actions_diff),
-                       "pois", "Noise = 2, SC == T; pois:")
-rm(x)
-```
-
-From this, we can take away that:
-
-1. The distribution of counts is more akin to a Negative Binomial distribution than a Poisson distribution
-1. The truncation-effect of whether a person completed the scenario affects the distribution of counts, and therefore, that should be considered as a filter before our regression
-
-Therefore, we assume the following structural model:
-
-$$num\_actions\_diff_i = NegBinomial(\mu_i, \phi)$$
-$$\begin{aligned}
-log(\mu_i) &= \beta_0 + \beta_{ax}\text{ax}_i + \beta_{dx}\text{dx}_i + \beta_{noise}\text{noise}_i +\\ &\beta_{ax:noise}\text{ax}_i\text{noise}_i + \beta_{dx:noise}\text{dx}_i\text{noise}_i + \\
-&\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}}
-\end{aligned}$$
-$$\begin{aligned}
-\beta_{.} &\sim Normal(0, 10)\\
-\phi &\sim Gamma(0.01, 0.01)
-\end{aligned}$$
-
-The prior for the $\phi$ parameter is the default used in `brms`; I see no need to change it.
-
-Model fitting:
-
-```{r, eval=train_models}
-# A null model to compare against
-num_actions_diff.model.null = brm(
-  num_actions_diff ~ 0 + Intercept,
-  family = negbinomial,
-  prior = c(set_prior("normal(0, 10)", class = "b"),
-            set_prior("gamma(0.01, 0.01)", class = "shape")),
-  data = plot_df %>% filter(scenario_completed == 1),
-  seed = default_seed,
-  save_all_pars = T,
-  sample_prior = T
-)
-num_actions_diff.model.null = add_criterion(num_actions_diff.model.null, "waic")
-num_actions_diff.model.null = add_criterion(num_actions_diff.model.null, "loo", reloo = T)
-saveModel(num_actions_diff.model.null)
-
-# The trend model to see if there is a trend in the noise level variable
-num_actions_diff.model.t = brm(
-  num_actions_diff ~ 0 + Intercept + ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal,
-  family = negbinomial,
-  prior = c(set_prior("normal(0, 10)", class = "b"),
-            set_prior("gamma(0.01, 0.01)", class = "shape")),
-  data = plot_df %>% filter(scenario_completed == 1),
-  seed = default_seed,
-  save_all_pars = T,
-  sample_prior = T
-)
-num_actions_diff.model.t = add_criterion(num_actions_diff.model.t, "waic")
-num_actions_diff.model.t = add_criterion(num_actions_diff.model.t, "loo", reloo = T)
-saveModel(num_actions_diff.model.t)
-
-# The values model, to see if specific values of the noise level variable are significant
-num_actions_diff.model.v = brm(
-  num_actions_diff ~ 0 + Intercept + ((has_dx + has_ax) * noise_level_f) + (gender + age_group + robot_experience) + num_optimal,
-  family = negbinomial,
-  prior = c(set_prior("normal(0, 10)", class = "b"),
-            set_prior("gamma(0.01, 0.01)", class = "shape")),
-  data = plot_df %>% filter(scenario_completed == 1),
-  seed = default_seed,
-  save_all_pars = T,
-  sample_prior = T
-)
-num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "waic")
-num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "loo", reloo = T)
-saveModel(num_actions_diff.model.v)
-
-# The number of data points that we're actually using per condition:
-# A tibble: 10 x 3
-# Groups:   study_condition, scenario_completed [10]
-#    study_condition scenario_completed     n
-#    <fct>           <fct>              <int>
-#  1 DX_100          1                     14
-#  2 AX_100          1                     20
-#  3 DXAX_100        1                     18
-#  4 DX_90           1                     11
-#  5 AX_90           1                     16
-#  6 DXAX_90         1                     18
-#  7 DX_80           1                     13
-#  8 AX_80           1                     19
-#  9 DXAX_80         1                     17
-# 10 BASELINE        1                     15
-
-# One alternative is to include data where scenario_completed is true, but
-# it is included as a predictor in the regression. I don't think that makes
-# sense because scenario_completed and num_optimal can together determine
-# the num_actions_diff. Also, NOTE: the significance results don't change
-# if we consider only those points where scenario is completed
-# num_actions_diff.model.v = brm(
-#   num_actions_diff ~ 0 + Intercept + ((has_dx + has_ax) * noise_level_f) + (gender + age_group + robot_experience) + num_optimal + scenario_completed,
-#   family = negbinomial,
-#   prior = c(set_prior("normal(0, 10)", class = "b"),
-#             set_prior("gamma(0.01, 0.01)", class = "shape")),
-#   data = plot_df,
-#   seed = default_seed,
-#   save_all_pars = T,
-#   sample_prior = T
-# )
-# num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "waic")
-# num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "loo", reloo = T)
-
-# Another option is to remove the effect of the baseline condition. This is because Baseline
-# possibly confounds with noise - on the one hand, baseline has no noise and could be
-# considered as a 0 noise condition; on the other hand, it has 100% noise. Again; there
-# doesn't seem to be a significant effect of ignoring baseline
-# num_actions_diff.model.v = brm(
-#   num_actions_diff ~ 0 + Intercept + ((has_dx + has_ax) * noise_level_f) + (gender + age_group + robot_experience) + num_optimal,
-#   family = negbinomial,
-#   prior = c(set_prior("normal(0, 10)", class = "b"),
-#             set_prior("gamma(0.01, 0.01)", class = "shape")),
-#   data = plot_df %>% filter(scenario_completed == 1, study_condition != "BASELINE"),
-#   seed = default_seed,
-#   save_all_pars = T,
-#   sample_prior = T
-# )
-# num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "waic")
-# num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "loo", reloo = T)
-
-# Yet another option is to use our prediction of the scenario being completed as a metric
-# for filtering. This probably will not work as well because our predictions can be quite
-# iffy. There is a significant effect of adding the predictions, but not enough to really
-# differentiate us in the ROPE
-# num_actions_diff.model.v = brm(
-#   num_actions_diff ~ 0 + Intercept + ((has_dx + has_ax) * noise_level_f) + (gender + age_group + robot_experience) + num_optimal + scenario_completed_pred,
-#   family = negbinomial,
-#   prior = c(set_prior("normal(0, 10)", class = "b"),
-#             set_prior("gamma(0.01, 0.01)", class = "shape")),
-#   data = plot_df,
-#   seed = default_seed,
-#   save_all_pars = T,
-#   sample_prior = T
-# )
-# num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "waic")
-# num_actions_diff.model.v = add_criterion(num_actions_diff.model.v, "loo", reloo = T)
-```
-```{r, eval=!train_models}
-# Load the models
-num_actions_diff.model.null = loadModel("num_actions_diff.model.null")
-num_actions_diff.model.t = loadModel("num_actions_diff.model.t")
-num_actions_diff.model.v = loadModel("num_actions_diff.model.v")
-```
-
-Model fitting results:
-
-```{r}
-# print(tidy_stan(num_actions_diff.model.null))
-print(performance::r2(num_actions_diff.model.null))
-
-# Print the parameters, and some initial diagnostics
-print(tidy_stan(num_actions_diff.model.t))
-print(performance::r2(num_actions_diff.model.t))
-
-print(tidy_stan(num_actions_diff.model.v))
-print(performance::r2(num_actions_diff.model.v))
-```
-
-Diagnostics of the fit:
-
-```{r fig.height=7, fig.width=15, eval=plot_diagnostics}
-# Alternative diagnostics: diagnostic_posterior(scenario_completed.model.v)
-
-# LOO cross-validation results
-print(num_actions_diff.model.null$criteria$loo$estimates)
-print(num_actions_diff.model.t$criteria$loo$estimates)
-print(num_actions_diff.model.v$criteria$loo$estimates)
-print(loo_compare(num_actions_diff.model.null,
-                  num_actions_diff.model.t,
-                  num_actions_diff.model.v))
-
-# Diagnostics of the sampling process
-par(mfrow=c(1,2))
-plot(num_actions_diff.model.t$criteria$loo, main = "Trend Model")
-plot(num_actions_diff.model.v$criteria$loo, main = "Values Model")
-
-# Include posterior predictive checks of the sampling (are sampling according
-# to the data that we actually have?)
-mcmc_intervals(as.matrix(num_actions_diff.model.null), regex_pars = "b_", prob = 0.90, prob_outer = 0.95) +
-  ggtitle("Null Model")
-
-p1 = pp_check(num_actions_diff.model.t, type = "bars_grouped", group = "has_ax", stat = "median") + ggtitle("t:has_ax")
-p2 = pp_check(num_actions_diff.model.t, type = "bars_grouped", group = "has_dx") + ggtitle("t:has_dx")
-p3 = pp_check(num_actions_diff.model.t, type = "bars_grouped", group = "noise_level") + ggtitle("t:noise_level")
-grid.arrange(p1, p2, p3, nrow = 3)
-mcmc_intervals(as.matrix(num_actions_diff.model.t), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
-  ggtitle("Trends Model")
-
-p1 = pp_check(num_actions_diff.model.v, type = "bars_grouped", group = "has_ax") + ggtitle("v:has_ax")
-p2 = pp_check(num_actions_diff.model.v, type = "bars_grouped", group = "has_dx") + ggtitle("v:has_dx")
-p3 = pp_check(num_actions_diff.model.v, type = "bars_grouped", group = "noise_level_f") + ggtitle("v:noise_level")
-grid.arrange(p1, p2, p3, nrow = 3)
-mcmc_intervals(as.matrix(num_actions_diff.model.v), regex_pars = "b_|^shape", prob = 0.90, prob_outer = 0.95) +
-  ggtitle("Values Model")
-
-# Plot predictions vs original
-preds_p_df = num_actions_diff.model.null %>% predict() %>% as_tibble()
-p1 =
-  preds_p_df %>%
-    add_column(num_actions_diff = num_actions_diff.model.null$data$num_actions_diff) %>%
-    ggplot(aes(x = Estimate, y = num_actions_diff, color = num_actions_diff)) +
-      geom_point() +
-      geom_abline(slope = 1, intercept = 0) +
-      labs(x = "Predicted values") +
-      ggtitle("Null Model")
-
-preds_p_df =
-  plot_df %>%
-  add_predicted_draws(num_actions_diff.model.null) %>%
-  ungroup() %>%
-  select(num_actions_diff, .prediction)
-preds_p_df =
-  preds_p_df %>%
-  mutate(num_actions_diff = factor(num_actions_diff, levels = seq(from = 1, to = 20), ordered = T),
-         .prediction = factor(.prediction, levels = seq(from = 1, to = 20), ordered = T))
-preds_p_df =
-  as_tibble(caret::confusionMatrix(preds_p_df$.prediction, preds_p_df$num_actions_diff)$table) %>%
-  mutate(Prediction = factor(Prediction, levels = seq(from = 1, to = 20), ordered = T),
-         Reference = factor(Reference, levels = seq(from = 1, to = 20), ordered = T))
-p2 =
-  preds_p_df %>%
-    ggplot(aes(x = Reference, y = Prediction, fill = n )) +
-      geom_tile()
-
-preds_p_df = num_actions_diff.model.t %>% predict() %>% as_tibble()
-p3 =
-  preds_p_df %>%
-    add_column(num_actions_diff = num_actions_diff.model.t$data$num_actions_diff) %>%
-    ggplot(aes(x = Estimate, y = num_actions_diff, color = num_actions_diff)) +
-      geom_point() +
-      geom_abline(slope = 1, intercept = 0) +
-      labs(x = "Predicted values") +
-      ggtitle("Trends Model")
-
-preds_p_df =
-  plot_df %>%
-  add_predicted_draws(num_actions_diff.model.t) %>%
-  ungroup() %>%
-  select(num_actions_diff, .prediction)
-preds_p_df =
-  preds_p_df %>%
-  mutate(num_actions_diff = factor(num_actions_diff, levels = seq(from = 1, to = 20), ordered = T),
-         .prediction = factor(.prediction, levels = seq(from = 1, to = 20), ordered = T))
-preds_p_df =
-  as_tibble(caret::confusionMatrix(preds_p_df$.prediction, preds_p_df$num_actions_diff)$table) %>%
-  mutate(Prediction = factor(Prediction, levels = seq(from = 1, to = 20), ordered = T),
-         Reference = factor(Reference, levels = seq(from = 1, to = 20), ordered = T))
-p4 =
-  preds_p_df %>%
-    ggplot(aes(x = Reference, y = Prediction, fill = n)) +
-      geom_tile()
-
-# Plot predictions vs original
-preds_p_df = num_actions_diff.model.v %>% predict() %>% as_tibble()
-p5 =
-  preds_p_df %>%
-    add_column(num_actions_diff = num_actions_diff.model.v$data$num_actions_diff) %>%
-    ggplot(aes(x = Estimate, y = num_actions_diff, color = num_actions_diff)) +
-      geom_point() +
-      geom_abline(slope = 1, intercept = 0) +
-      labs(x = "Predicted values") +
-      ggtitle("Values Model")
-
-preds_p_df =
-  plot_df %>%
-  add_predicted_draws(num_actions_diff.model.v) %>%
-  ungroup() %>%
-  select(num_actions_diff, .prediction)
-preds_p_df =
-  preds_p_df %>%
-  mutate(num_actions_diff = factor(num_actions_diff, levels = seq(from = 1, to = 20), ordered = T),
-         .prediction = factor(.prediction, levels = seq(from = 1, to = 20), ordered = T))
-preds_p_df =
-  as_tibble(caret::confusionMatrix(preds_p_df$.prediction, preds_p_df$num_actions_diff)$table) %>%
-  mutate(Prediction = factor(Prediction, levels = seq(from = 1, to = 20), ordered = T),
-         Reference = factor(Reference, levels = seq(from = 1, to = 20), ordered = T))
-p6 =
-  preds_p_df %>%
-    ggplot(aes(x = Reference, y = Prediction, fill = n)) +
-      geom_tile()
-
-grid.arrange(p1, p3, p5, p2, p4, p6, nrow = 2, ncol = 3)
-```
-
-Inferences from the fitting:
-
-```{r, eval=report_bayesfactors}
-# Compute the bayes factor for each parameter value. Note: we compare
-# here against the ROPE, and not the degenerate null hypothesis of 0
-# Bayes-Factor values would be more significant in the latter case
-# According to the Raftery, 1995 rules
-# bf = 1 - 3: Weak
-# bf = 3 - 20: Positive
-# bf = 20 - 150: Strong
-# bf > 150: Very strong
-print(bayesfactor_rope(num_actions_diff.model.null, null = c(-0.55, 0.55)), n = 30)
-print(bayesfactor_rope(num_actions_diff.model.t, null = c(-0.55, 0.55)), n = 30)
-print(bayesfactor_rope(num_actions_diff.model.v, null = c(-0.55, 0.55)), n = 30)
-```
-```{r}
-options(digits = 3)
-# Check the significance of each hypothesis
-h_df = as_tibble(insight::get_parameters(num_actions_diff.model.t)) %>%
-  transmute(
-    Intercept = b_Intercept,
-    has_ax_test = -2 * b_has_ax1,
-    has_dx_test = -2 * b_has_dx1,
-    noise_levelL_test = b_noise_level.L,
-    noise_levelQ_test = b_noise_level.Q
-  )
-
-hyp_results = test_hypotheses(h_df, rope_values = c(-0.55, 0.55))
-print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, ROPE_Equivalence) %>% as.matrix())
-
-h_df = as_tibble(insight::get_parameters(num_actions_diff.model.v)) %>%
-  transmute(
-    Intercept = b_Intercept,
-    has_ax_test = -2 * b_has_ax1,
-    has_dx_test = -2 * b_has_dx1,
-    noise_level1_test = b_noise_level_f1,
-    noise_level2_test = b_noise_level_f2,
-    noise_level3_test = - b_noise_level_f1 - b_noise_level_f2
-  )
-
-hyp_results = test_hypotheses(h_df, rope_values = c(-0.55, 0.55))
-print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, ROPE_Equivalence) %>% as.matrix())
-options(digits = 7)
-```
-
-**Results**:
-
-There is no significant effect of any of the suggestions parameters on the number of actions taken, *once the effect of action suggestions on the completion of the scenario has been controlled for*. The `pd` value for gender suggests that there is an effect of gender exists on the number of actions, but we don't test the significance of that effect.
-
-(The ROPE is defined as [-0.55, 0.55]. It corresponds to a numerical range of 1.1. Therefore, a change of less than 0.55 actions in either direction is considered no different from a change of 0 in the number of actions)
-
-There are no plots to show (all effects are supposedly non-existent).
-
-```{r, echo=F, results=F, message=F, warning=F}
-rm(num_actions_diff.model.null, num_actions_diff.model.t, num_actions_diff.model.v)
-gc()
-```
 
 # Likert Scales {.tabset}
 
